# msystem

./: .gitignore  pyproject.toml
msystem/: __init__.py  conducting_dictionary.py  m_system.py
